# python-study-books

./: .env  README.md  books.json  connector_database.py  custom_error_validation.py  main.py  models.py  pyproject.toml  scripts_httprouting.py
db_models/: __init__.py  author.py  base.py  book.py
